# matlab-to-python-application-translation-project2-nrc

./: .gitignore  .pylintrc  Pipfile  README.md  install.py  pyproject.toml  qeels.csv  setup.py
.github/workflows/: build-windows.yaml  lint.yaml  linting.yaml  test.yaml
alignment-software/: DM3lib.py  async_handler.py  main.py  main_window.py  pyproject.toml  sequence_selector.py
alignment-software/engine/: dm3.py  file_discovery.py  img_processing.py  optimization.py
alignment-software/gui/: window_main.py
alignment-software/scripts/: install.py
alignment-software/tests/: test_csv_io.py  test_dm3.py  test_file_discovery.py  test_img_io.py  test_img_processing.py  test_optimization.py  test_particle_tracking.py
alignment_software/gui/: frame_steps.py
alignment_software/test/: test_dm3.py  test_img_io.py
common/gui/: __init__.py  numericspinbox.py  scalespinbox.py
docs/scope-charter/: README.md  scope-charter.md  work-breakdown.csv
docs/technical documentation/: README.md  alignment.md  nanomi.md  qEELS.md  setup.md  standards_and_resources.md
docs/weekly logs/: README.md
entrypoints/: alignment_software.py  nanomi_optics.py  qeels.py
nanomi-optics/: pyproject.toml
nanomi-optics/nanomi_optics/: __init__.py
nanomi-optics/tests/: test_optimization.py  test_save_results.py
qeels/: main.py  pyproject.toml
qeels/test/: test_prz.py
scripts/: README.txt  aligment_software.bat  alignment_software.py  install-global.bat  install-here.bat  install-user.bat  install.py  run-aligment_software.bat  run-nanomi_optics.bat  run-qeels.bat  uninstall.bat
(+217 files in other folders)
