[tool.poetry]
name = "nrcemt"
version = "0.1.0"
description = "NRC electron microscope tools ported from MATLAB to Python"
authors = [
    "Garrett Cook <garrett.cook@shaw.ca>",
    "Jasmine Mishra <jasmine.victoria.mishra@gmail.com>",
    "Jose Pena Revelo <penarevelo@gmail.com>",
    "Lucas Towers <luctowers@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
